feat(agent): 多轮对话式计划修改（3 轮熔断 + 租约排他 + planHash 刷新）